--- a/research.html
+++ b/research.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<link rel="stylesheet" href="files/acl.css" type="text/css" />
+<link rel="stylesheet" href="acl.css" type="text/css" />
  
 
  <!-- Change title to your name NOTE: you have to do this in each of the html files-->
