--- a/research.html
+++ b/research.html
@@ -40,7 +40,7 @@
 			<div id="paperlink">Rakesh Pandey, Aryabartta Sahu. <i>Access-Aware Self-adaptive Data Mapping onto
 3D-stacked Hybrid DRAM-PCM based Chip-Multiprocessor</i>, in 21st IEEE International Conference on High-Performance Computing and Communications (<strong>HPCC-2019, EI Index, Core Ranking B</strong>).</div>
 	
-			<div id="paperlink">Rakesh Pandey, Aryabartta Sahu. Performance and Area Trade-off of 3D-stacked Chip-Multiprocessor with Hybrid Interconnect, in IEEE Transaction of Emerging Topics and Computing <strong>(First Review Submitted)</strong>.</div>
+			<div id="paperlink">Rakesh Pandey, Aryabartta Sahu. Performance and Area Trade-off of 3D-stacked Chip-Multiprocessor with Hybrid Interconnect, in IEEE Transaction of Emerging Topics and Computing <strong>(Accepted and in Press)</strong>.</div>
 
  			<div id="paperlink">Rakesh Pandey, Aryabartta Sahu. <i>Run-time Self-Adaptive Data Page Mapping on Chip-Multiprocessor: An alternative to 3D-stacked DRAM as Cache</i>, in >Elsevier Journal of System Architecture <strong>(Under Review)</strong>.</div>
 
