--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!-- <img id="portrait" src="images/nactem.jpg" height="80" width="170"/> -->
 		<!--Name-->
 		<div id="name">Rakesh Pandey</div>
-		<div id="affiliation">Dual Degree (M.Tech+Ph.D)<br />Indian Institute of Technology Guwahati</div>
+		<div id="affiliation">R & D Engineer, Senior <br />Synopsys, Bangalore</div>
 		<div id="navi">	
 			<a href="index.html"><div id="on">Home</div></a>
 			<a href="research.html"><div id="off">Research</div></a> 
@@ -47,7 +47,7 @@
 		<div id="twocolright">
 			<div id="subheader">Welcome</div>
 				<div id="subsubheader">About Me:</div>
-					Currently, I am a final year Dual Degree(M.tech+Ph.D) student in the Department of Computer Science and Engineering, Indian Institute of Technology, Guwahati (IIT Guwahati), and have submitted my Ph.D. thesis. I did my undergraduate, B.Tech, in Electronics and Communication Engineering. My research specializations are in Computer Architecture. Specifically, my current research interest is in Chip Multiprocessors, NOC (Network on Chip), Self-Adaptive System, and Memory (3D-stacked) organization in Chip-Multiprocessor system. 
+					Currently, I am affliated to Synopsys, Bangalore as a Senior R & D Engineer in the Design Group. Earlier, I worked in BITS Pilani, Hyderabad Campus as an Assistant Professor in the Dept. of Computer Science. Before that I was Dual Degree (M.tech+Ph.D) student in the Department of Computer Science and Engineering, Indian Institute of Technology, Guwahati (IIT Guwahati). I did my undergraduate, B.Tech, in Electronics and Communication Engineering. My research specializations are in Computer Architecture. Specifically, my current research interest is in Chip Multiprocessors, NOC (Network on Chip), Self-Adaptive System, and Memory (3D-stacked) organization in Chip-Multiprocessor system. 
 <br /> <br />
 
 
