--- a/index.html
+++ b/index.html
@@ -23,12 +23,21 @@
 	<div id="header"> 
 		<!-- <img id="portrait" src="images/nactem.jpg" height="80" width="170"/> -->
 		<!--Name-->
-		<div id="name">Rakesh Pandey</div>
+		<div id="twocolleft">Rakesh Pandey</div>
 		<div id="affiliation">R & D Engineer, Senior <br />Synopsys, Bangalore</div>
 		<div id="navi">	
 			<a href="index.html"><div id="on">Home</div></a>
 			<a href="research.html"><div id="off">Research</div></a> 
 		</div>
+		
+		<div id="twocolright">
+			<!-- your picture should not exceed a width of 240px, preferably 239px, otherwise internet explorer 8 (and maybe other version) does not disply the website correctly-->
+			<img id="portrait" src="photo.jpg" width="150" height="180">
+			<div id="contact">Mobile: +91 9085858131</div>
+			<!-- the link of your email adress might be too long. try abbreviating it e.g. by dropping the @lse.ac.uk part -->
+			<div id="contact">Email: rakesh.pandey@iitg.ac.in</div>
+		</div>
+		
 	</div>
 	<!--end Header-->
 </div>
@@ -37,13 +46,7 @@
 <div id="outerwrapper">
 	<!--Content-->
 	<div id="maincontent">
-		<div id="twocolleft">
-			<!-- your picture should not exceed a width of 240px, preferably 239px, otherwise internet explorer 8 (and maybe other version) does not disply the website correctly-->
-			<img id="portrait" src="photo.jpg" width="150" height="180">
-			<div id="contact">Mobile: +91 9085858131</div>
-			<!-- the link of your email adress might be too long. try abbreviating it e.g. by dropping the @lse.ac.uk part -->
-			<div id="contact">Email: rakesh.pandey@iitg.ac.in</div>
-		</div>
+		
 		<div id="twocolright">
 			<div id="subheader">Welcome</div>
 				<div id="subsubheader">About Me:</div>
