--- a/index.html
+++ b/index.html
@@ -24,12 +24,9 @@
 		<!-- <img id="portrait" src="images/nactem.jpg" height="80" width="170"/> -->
 		<!--Name-->
 		
-		<div id="twocolleft">Rakesh Pandey</div>
+		<div id="name">Rakesh Pandey</div>
 		<div id="affiliation">R & D Engineer, Senior <br />Synopsys, Bangalore</div>
-		<div id="navi">	
-			<a href="index.html"><div id="on">Home</div></a>
-			<a href="research.html"><div id="off">Research</div></a> 
-		</div>
+		
 		
 		<div id="twocolright">
 			<!-- your picture should not exceed a width of 240px, preferably 239px, otherwise internet explorer 8 (and maybe other version) does not disply the website correctly-->
@@ -37,6 +34,11 @@
 			<div id="contact">Mobile: +91 9085858131</div>
 			<!-- the link of your email adress might be too long. try abbreviating it e.g. by dropping the @lse.ac.uk part -->
 			<div id="contact">Email: rakesh.pandey@iitg.ac.in</div>
+		</div>
+		
+		<div id="navi">	
+			<a href="index.html"><div id="on">Home</div></a>
+			<a href="research.html"><div id="off">Research</div></a> 
 		</div>
 		
 	</div>
