--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<!-- <img id="portrait" src="images/nactem.jpg" height="80" width="170"/> -->
 		<!--Name-->
 		
-		<div id="name">Rakesh Pandey</div>
+		<div id="Name">Rakesh Pandey</div>
 		<div id="affiliation">R & D Engineer, Senior <br />Synopsys, Bangalore</div>
 		
 		
