--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<!-- <img id="portrait" src="images/nactem.jpg" height="80" width="170"/> -->
 		<!--Name-->
 		
-		<div id="Name">Rakesh Pandey</div>
+		<div id="name">Rakesh Pandey</div>
 		<div id="affiliation">R & D Engineer, Senior <br />Synopsys, Bangalore</div>
 		<div id="contact">Mobile: +91 9085858131</div>
 			<!-- the link of your email adress might be too long. try abbreviating it e.g. by dropping the @lse.ac.uk part -->
