--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<!--Content-->
 	<div id="maincontent">
 		
-		<div>
+		<div id="onecol">
 			<div id="subheader">Welcome</div>
 				<div id="subsubheader">About Me:</div>
 					Currently, I am affliated to Synopsys, Bangalore as a Senior R & D Engineer in the Design Group. Earlier, I worked in BITS Pilani, Hyderabad Campus as an Assistant Professor in the Dept. of Computer Science. Before that I was Dual Degree (M.tech+Ph.D) student in the Department of Computer Science and Engineering, Indian Institute of Technology, Guwahati (IIT Guwahati). I did my undergraduate, B.Tech, in Electronics and Communication Engineering. My research specializations are in Computer Architecture. Specifically, my current research interest is in Chip Multiprocessors, NOC (Network on Chip), Self-Adaptive System, and Memory (3D-stacked) organization in Chip-Multiprocessor system. 
